Use -no-undefined for win32 builds
This is the libtool flag which is different than the ld flag, and is
needed for building win32 dlls..

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,7 +49,7 @@ libgrits_la_LDFLAGS = $(AM_LDFLAGS) \
 # Demo program
 if WIN32
 AM_CPPFLAGS += -DUSE_WGL
-AM_LDFLAGS  += -mwindows
+AM_LDFLAGS  += -mwindows -no-undefined
 dots         = ..
 else
 AM_CPPFLAGS += -DUSE_GLX
