--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,7 +40,7 @@ libgrits_la_SOURCES = grits.h \
 libgrits_la_CPPFLAGS = $(AM_CPPFLAGS) \
 	-DPKGDATADIR="\"$(dots)$(datadir)/$(GRITS_SUBDIR)\"" \
 	-DPLUGINSDIR="\"$(dots)$(libdir)/$(GRITS_SUBDIR)\""
-libgrits_la_LIBADD  = $(AM_LDADD) \
+libgrits_la_LIBADD  = $(AM_LDADD) -lm \
 	objects/libgrits-objects.la \
 	data/libgrits-data.la
 libgrits_la_LDFLAGS = $(AM_LDFLAGS) \
