Fix memory leaks

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -98,5 +98,5 @@ memcheck: all
 	         --num-callers=50               \
 	         --suppressions=gtk.suppression \
 	         --suppressions=/usr/lib/valgrind/default.supp \
-	         ./grits-test                   \
+	         .libs/grits-test               \
 	2> valgrind.out
