Move OpenGL includes to a common place
Apple seems to think the should put GL.h in OpenGL instead of GL..
putting it all gtkgl.h makes it a little easier, but requires gtkgl.h to
be included in the install and by grits.h.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ grits_include_HEADERS = \
 	grits-opengl.h  \
 	grits-plugin.h  \
 	grits-util.h    \
+	gtkgl.h         \
 	gpqueue.h       \
 	roam.h
 
