--- a/src/objects/Makefile.am
+++ b/src/objects/Makefile.am
@@ -13,6 +13,7 @@ grits_objects_include_HEADERS = \
 	grits-tile.h     \
 	grits-volume.h   \
 	grits-poly.h     \
+	grits-line.h     \
 	marching.h
 
 noinst_LTLIBRARIES = libgrits-objects.la
@@ -23,6 +24,7 @@ libgrits_objects_la_SOURCES = \
 	grits-tile.c     grits-tile.h     \
 	grits-volume.c   grits-volume.h   \
 	grits-poly.c     grits-poly.h     \
+	grits-line.c     grits-line.h     \
 	marching.c       marching.h
 libgrits_objects_la_LDFLAGS = -static
 
